--- a/source/css/general-style.css
+++ b/source/css/general-style.css
@@ -598,10 +598,6 @@ video {
   top: 50%;
 }
 
-.m-0 {
-  margin: 0px;
-}
-
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -891,6 +887,11 @@ video {
 
 .leading-loose {
   line-height: 2;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-white {
