--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -5,6 +5,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/source/css/general-style.css">
+<script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/brython@3.12.3/brython.min.js">
+</script>
+<script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/brython@3.12.3/brython_stdlib.js">
+</script>
 <script src="/source/js/media.js"></script>
 <style>
   html, body {
